--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -390,63 +390,82 @@ Certain properties of the application can be controlled (e.g App name, logging l
 
 // tag::customField[]
 === Custom Field
-==== Model
-A UniqueCustomFieldList Class is created which will be used to store a person's Custom Fields.
+==== Custom Field Model
+A UniqueCustomFieldList Class is created which contains a list to store a person's Custom Fields.
 
 Each person can have multiple custom fields which are optional. Example of custom fields include nickname, favourite food, relatives etc.
 
 Each custom field of a person includes two variables: the custom field name and the custom field value.
 For example, nickname is a custom field name whereas Ahchuang is a custom field value. (i.e. Ahchuang is the nickname of the person)
 
-==== Logic
+==== Custom Field Logic
 A Command - CustomCommand - is used to manipulate the custom fields of a person. The CustomCommand is an undoable command.
 
 When a new CustomCommand is created, it will be constructed with 3 parameters: Index, String, String.
 The 3 parameters represents the index of the person in the Contact Book, a custom field name and a custom field value respectively.
+CustomCommand can be undo therefore it inherits the UndoableCommand.
 
-If the input custom field name of the person is not existed yet, the custom field with name and value as inputs will be created and added into the person's UniqueCustomFieldList.
-For example, command `custom 1 Nickname Ahchuang` will add a nickname custom field with value "Ahchuang" for the first person in the Contact Book if nickname field previously does not exist.
-Else if the input custom field name of the person has already existed and the input custom field value is not empty, the custom field value of that custom field for the person will be replaced with the input value.
-For example, command `custom 1 Nickname Jon` will change the nickname custom field of the first person from his previous nickname to "Jon".
-Else if the input custom field value is empty, the custom field of the person will be cleared.
+If the input custom field name of the person is not existed yet, the custom field with name and value as inputs will be created and added into the person's UniqueCustomFieldList. +
+For example, command `custom 1 Nickname Ahchuang` will add a nickname custom field with value "Ahchuang" for the first person in the Contact Book if nickname field previously does not exist. +
+Else if the input custom field name of the person has already existed and the input custom field value is not empty, the custom field value of that custom field for the person will be replaced with the input value. +
+For example, command `custom 1 Nickname Jon` will change the nickname custom field of the first person from his previous nickname to "Jon". +
+Else if the input custom field value is empty, the custom field of the person will be cleared. +
 For example, command `custom 1 Nickname` will clear the nickname custom field of the first person in the Contact Book.
 
-==== Storage
-New XmlAdaptedCustomField class is created and new XmlElement customised is defined in XmlAdaptedPerson class to allow storage of
+==== Custom Field Storage
+New XmlAdaptedCustomField class is created which allows the `CustomField` object in Model to be adapted as Xml values. +
+New XmlElement `customised` is defined in XmlAdaptedPerson class to allow storage of custom fields into a list.
+image::CustomFieldStorageComponentClassDiagram.png[width="800"]
 
-==== Ui
-A new label will be displaced for each person for each custom field.
+==== Custom Field Ui
+There are two Labels constructed for every CustomField, one for displaying custom field name, the other for displaying custom field value.
+image::CustomFieldDisplayDiagram.png[width="450"]
+In the above diagram, there are two custom fields for the person named "Alex Yeoh": "Birthday" and "Nickname". +
+For each custom fields, there are two `Label` - The first custom field has one `Label` for custom field name "Birthday" and one `Label` for custom field value "11/02/1998";
+the second custom field has one `Label` for custom field name "Nickname" and one `Label` for custom field value "Ah_Lex".
 
 ==== Sequence Diagram
 image::CustomCommandSequenceDiagram.png[width="800"]
 // end:: customField[]
 
+==== Design Consideration
+
+**Aspect:** The way to display custom fields +
+**Alternative 1 (current choice):** Construct two labels - one for custom field name and the other for custom field value. The labels of every person are put in a `VBox` which is then put in a `ScrollPane`. +
+**Pros:** Custom field names and custom field values are separated and hence they can have proper indentation. Moreover, as a `ScrollPane` is used, when there are many CustomFields, the user can just scroll down to view all information. +
+**Cons:** More work to code for extra attributes such as constructing Labels. +
+**Alternative 2:** Overwrite the toString() method in `UniqueCustomFieldList` to include all custom field names and custom field values of each `CustomField` in the list, and display the `UniqueCustomFieldList` by using just one `Label` +
+**Pros:** Easy to code as only one `Label` is needed to display all custom fields +
+**Cons:** Increase coupling and custom field names and custom field values cannot be indented properly.
+
 // tag::photo[]
 === Upload photo
 ==== Model
-A Photo class is created and added as an attribute to the Person class to store the icon photo of each person.
-A default photo is added to each person when they are just initialised without adding any icon photos.
-
-The icon photo of each person is identified using a String value which represents the path of the photo image.
+A Photo class is created and added as an attribute to the Person class to store the icon photo of each person. +
+The Photo class has one String attribute - "pathname" - stores the path to the photo image. +
+When a person is just created without any input pathname for image, a `Photo` object will be created with the default constructor being called. +
+The default constructor will initialise the "pathname" attribute to be the path of the `default_photo.png`.
 
 ==== Logic
-A Command - UploadPhotoCommand - is used to manipulate the icon photo of a person. The UploadPhotoCommand is an undoable command.
+A Command - UploadPhotoCommand - is used to manipulate the icon photo of a person. +
+The UploadPhotoCommand is an undoable command and therefore it inherits UndoableCommand.
 
 When a new Photo is created, it will be constructed with 2 parameters: Index, String.
-The 2 parameters represents the index of the person in the Contact Book, the path of the photo image indented to upload.
+The 2 parameters represents the index of the person in the Contact Book, the path of the photo image intended to upload respectively.
 
-If the icon photo of the person is previously the default photo, a photo with input path will be created and added into the person's Photo attribute.
-For example, command `upload 1 D:\Git Projects\wolf.jpg` will add a photo image with path "D:\Git Projects\wolf.jpg" for the first person in the Contact Book if photo icon previously is the default.
-Else if the icon photo of the person has already existed and is not the defaulted, the icon photo of the person will be replaced with the input value.
-For example, command `upload 1 D:\Git Projects\wolf.jpg` will update the icon photo of the person to the photo with path "D:\Git Projects\wolf.jpg".
-Else if the input photo path is empty, the icon photo of the person will be reset to the default photo.
+If the icon photo of the person is previously the default photo, a photo with input path will be created and added into the person's Photo attribute. +
+For example, command `upload 1 D:\Git Projects\wolf.jpg` will add a photo image with path "D:\Git Projects\wolf.jpg" for the first person in the Contact Book if photo icon previously is the default. +
+Else if the icon photo of the person has already existed and is not the defaulted, the icon photo of the person will be replaced with the input value. +
+For example, command `upload 1 D:\Git Projects\wolf.jpg` will update the icon photo of the person to the photo with path "D:\Git Projects\wolf.jpg". +
+Else if the input photo path is empty, the icon photo of the person will be reset to the default photo. +
 For example, command `upload 1` will reset the icon photo of the first person to the default photo in the Contact Book.
 
 ==== Storage
 New XML value Photo is created in XmlAdaptedPerson class to allow the storing of icon photo path for each person.
 
 ==== Ui
-Image of the icon photo will be displayed after uploaded.
+Image of the icon photo for each person is display on the respective PersonListCard in the PersonListPanel.
+image::PhotoDisPlayDiagram.png[width="400"]
 
 ==== Sequence Diagram
 image::UploadPhotoCommandSequenceDiagram.png[width="800"]
@@ -454,12 +473,19 @@ image::UploadPhotoCommandSequenceDiagram.png[width="800"]
 
 // tag::deleteByName[]
 === DeleteByName
-==== Logic
-A Command - `DeleteByName` Command is created to serve the purpose of deleting an contact from the `Contact book` via its name.
-The Command takes into a String as the parameter which represents the `Name` of the person that is intended to delete.
-When the command is called, the `Contact Book` will get the internal list of all persons and check through the `Name` attribute of each person.
-If there is a person with name equals to the parameter input, the person will be removed from the `Contact Book`.
+
+A Command - `DeleteByName` Command is created to serve the purpose of deleting an contact from the `Contact book` via its name. +
+The Command takes into a String as the parameter which represents the `Name` of the person that is intended to delete. +
+When the command is called, the `Contact Book` will loop through the internal list of all persons and check through the `Name` attribute of each person. +
+If there is a person with name equals to the parameter input, the person will be removed from the `Contact Book`. +
 If the input name does not match any `Name` in the internal list of all `Person` objects, the internal list will not be modified but the `Result Box` will feedback to users that the person name is not found.
+
+image::BeforeDeleteByNameDiagram.png
+For example, referring to the above diagram, originally there is a person named Alex Yeoh, after executing "DeleteByName Alex Yeoh", the person is removed as shown in the below diagram.
+image::AfterDeleteByNameDiagram.png
+
+If the person named Alex Yeoh does not exist, executing "DeleteByName Alex Yeoh" will not modify the Contact Book but receive a message as shown in the below diagram.
+image::InvalidDeleteByNameDiagram.png
 // end:: deleteByName[]
 
 // tag::search[]
