--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -34,7 +34,7 @@ Responsibilities: Ui
 '''
 
 === Lu Lechuan
-image::lulechuan.jpg[width="150", align="left"]
+image::lulechuan.png[width="150", align="left"]
 {empty}[https://github.com/lulechuan[github]] [<<LuLechuan#, portfolio>>]
 
 Role: Developer
